# topolegal

./: .gitignore  1.0_data-load.ipynb  1.1_rtf_2_txt_conversion.ipynb  1.2_extract_batch_to_bq.ipynb  2.0_dataset_preparing.ipynb  3.0_legal_gnn_dataset_usage.ipynb  Dockerfile  Dockerfile2  README.md  __init__.py  fetch_docs.py  preproc.py  process-batch-cronjob.yaml  pyproject.toml  requirements.txt  test_model.ipynb
.ipynb_checkpoints/: 1.0_data-load-checkpoint.ipynb
ci/: README.md  build-and-push.sh  process-batch-cronjob.yaml  setup-k8s-secret.sh
datasets/: README.md  legal_gnn_dataset.py
models/: __init__.py  __main__.py  graph_dataset.py  graphcheck.py  trainer.py
models/notebooks/: training.ipynb
processors/: __init__.py
processors/code_processing/: README.md  code_processing.ipynb  config.py  env.example  main.py  models.py  test_output_sample.json  test_parser.py  test_structure.py
processors/code_processing/.ipynb_checkpoints/: code_processing-checkpoint.ipynb
processors/code_processing/codes/: criminal_process_code.htm
processors/code_processing/repositories/: __init__.py  base.py  bigquery_repository.py
processors/code_processing/resources/: __init__.py  base.py  local_resource.py
processors/code_processing/services/: __init__.py  code_extraction_service.py
processors/csv_custom_parser/: README.md  __init__.py  __main__.py  models.py  parser.py
processors/entities/: __init__.py  __main__.py  adress.py  case.py  crime.py  date.py  doctype.py  info.py  number.py  person.py  role.py
processors/graph_extraction/: README.md  __init__.py  __main__.py  graph.py
processors/resources/: cause_categories.csv  courts.csv  regions.csv
src/: __init__.py
src/legal_graph/models/: __init__.py  __main__.py  gnn.py  graph_dataset.py  graphcheck.py  trainer.py
src/legal_graph/models/notebooks/: training.ipynb
src/legal_graph/processors/: __init__.py
src/legal_graph/processors/balance/: __init__.py  __main__.py
src/legal_graph/processors/entities/: __init__.py  __main__.py  adress.py  case.py  crime.py  date.py  doctype.py  info.py  number.py  person.py  role.py
src/legal_graph/processors/graph_extraction/: README.md  __init__.py
src/legal_graph/tests/processors/entities/: test_person.py
tests/processors/entities/: test_person.py
topolegal.egg-info/: PKG-INFO  SOURCES.txt
