[project]
name            = "topolegal"
version         = "0.1.0"
description     = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-cloud==0.34.0",
    "google-cloud-bigquery[all]==3.32.0",
    "google-cloud-bigquery-storage>=2.24",
    "google-cloud-storage==3.1.0",
    "pandas>=2",
    "protobuf>=6.31.0",
    "pymorphy3==2.0.3",
    "pymorphy3-dicts-uk==2.4.1.1.1663094765",
    "python-dotenv>=1.1.0",
    "spacy>=3.8",
    "pip>=25.1.1",
    "spacy-transformers>=1.3.8",
    "gliner==0.2.19",
    "psycopg>=3.2",
    "gliner-spacy>=0.0.9",
    "transformers>=4.49.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "ftfy>=6.3.1",
    "pypandoc==1.15",
    "pandoc==2.4",
    "striprtf>=0.0.29",
    "snowballstemmer>=3.0.1",
    "psycopg>=3.2.9",
    "requests>=2.32.3",
    "psycopg-binary>=3.2.9",
    "openai==1.90.0",
]

